--- a/appYolo/app/src/main/AndroidManifest.xml
+++ b/appYolo/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher_v2"
         android:theme="@style/MaterialTheme">
 
         <activity android:name="org.tensorflow.demo.CameraActivity"
