--- a/appYolo/app/src/main/AndroidManifest.xml
+++ b/appYolo/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.tensorflow.demo">
+    package="org.tensorflow.mobapps">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
@@ -17,7 +17,7 @@
         android:icon="@mipmap/ic_launcher_v2"
         android:theme="@style/MaterialTheme">
 
-        <activity android:name="org.tensorflow.demo.CameraActivity"
+        <activity android:name="lt.vu.mobapps.CameraActivity"
                   android:screenOrientation="portrait"
                   android:label="@string/app_name">
             <intent-filter>
