--- a/appYolo/jni-build/jni/include/tensorflow/examples/android/AndroidManifest.xml
+++ b/appYolo/jni-build/jni/include/tensorflow/examples/android/AndroidManifest.xml
@@ -33,7 +33,7 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/MaterialTheme">
 
-        <activity android:name="org.tensorflow.demo.CameraActivity"
+        <activity android:name="org.tensorflow.mobapps.CameraActivity"
                   android:screenOrientation="portrait"
                   android:label="@string/app_name">
             <intent-filter>
